# wintermute-dialog

./: CHANGELOG.md  Cargo.toml  README.md
agent/: intent-card.json
pkg/: README.md  install-user.sh
pkg/systemd/user/: wm-dialog.service
src/: action.rs  bus.rs  config.rs  daemon.rs  degrade.rs  distress.rs  event.rs  family.rs  fsm.rs  lib.rs  main.rs  silence.rs  state.rs
tests/: ac7_soak.rs  acceptance_template.rs  bus_smoke.rs
